--- a/hbnb_web/index.html
+++ b/hbnb_web/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/icon.png" type="image/png">
-    <title>AirBnB clone - Web static {by} = "MASMIYEN"</title>
+    <title>AirBnB clone - Web static {by = MASMIYEN}</title>
   
-    <!-- Include the dark mode styles -->
+    <!-- Include the dark mode styles initially -->
     <style>
+        body {
+            background-color: #fff;
+            color: #000;
+        }
+
         body.dark-mode {
             background-color: #333;
             color: #fff;
